# harvest-pilot

./: .env.example  .gitignore  ASSISTENTE_IA.md  IMPLEMENTACAO.md  LICENSE  LOGO_INTEGRATION.md  MOBILE.md  RAILWAY.md  README.md  TESTES_PRODUCAO.md  claude.md  docker-compose.yml  exemplo-terrenos.geojson  exemplo-terrenos.kml  exemplo-terrenos.kmz  package-lock.json  package.json  playwright.config.ts  production.spec.ts
apps/backend/: .env.example  CRIAR_ADMIN_BO.md  nest-cli.json  nixpacks.toml  package-lock.json  package.json  railway.json  tsconfig.json
apps/backend/prisma/: init.sql  schema.prisma  seed.ts
apps/backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/backend/src/scripts/: clear-imagens.ts  create-admin-bo.ts  seed-calendario.ts  seed-imagens-remotas.ts  seed-insumos.ts  seed-meteorologia.ts  seed-organizacoes.ts  seed-tarefas.ts  seed-utilizadores.ts
apps/frontend/: .env.example  capacitor.config.ts  next.config.js  package.json
apps/frontend/public/: manifest.json  offline-fallback.json
apps/frontend/src/app/: globals.css  layout.tsx
apps/frontend/src/components/: FloatingChat.tsx  Header.tsx  ImagensRemotas.tsx  LayoutWrapper.tsx  Map.tsx  MapEditor.tsx  MapPreview.tsx  MapSingle.tsx  MapThumbnail.tsx  Meteorologia.tsx  Navbar.tsx  SWUpdateNotification.tsx  Sidebar.tsx
apps/frontend/src/contexts/: AuthContext.tsx
apps/frontend/src/hooks/: use-calendario.ts  use-camera.ts  use-ciclos.ts  use-culturas.ts  use-geolocation.ts  use-ia.ts  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+152 files in other folders)
