[package]
name = "harvestpilot-desktop"
version = "0.1.0"
description = "HarvestPilot desktop app"
authors = ["HarvestPilot"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
